--- a/acces.html
+++ b/acces.html
@@ -1,75 +1,26 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Accès au zoo - Aquazoo des Ciel2</title>
+  <title>Accès au Zoo</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f4faff;
-      margin: 0;
-      color: #333;
-    }
-
-
-    header { position: sticky; top: 0; z-index: 10; }
-    nav ul {
-      list-style: none;
-      display: flex;
-      gap: 20px;
-      justify-content: center;
-      background: #0077cc;
-      padding: 15px;
-      border-radius: 8px;
-      margin: 0;
-      flex-wrap: wrap;
-    }
-    nav ul li a {
-      text-decoration: none;
-      color: white;
-      font-weight: bold;
-      font-size: 18px;
-      padding: 8px 12px;
-      border-radius: 6px;
-      transition: 0.3s;
-    }
-    nav ul li a:hover { background: #005fa3; }
-
-    .container { max-width: 1100px; margin: 30px auto; padding: 0 16px; text-align: center; }
-    h1 { color: #0077cc; margin-bottom: 10px; }
-    p { margin-bottom: 30px; font-size: 18px; }
-
-    iframe { border:0; width: 100%; max-width: 600px; height: 450px; border-radius: 8px; }
-
-    
+    body { font-family: Arial, sans-serif; background-color:#f4faff; margin:0; color:#333; text-align:center; }
+    h1,h2 { color:#0077cc; margin-top:20px; }
+    p { font-size:18px; margin-bottom:20px; }
+    iframe { max-width:100%; border-radius:8px; margin-bottom:20px; }
+    a { text-decoration:none; color:#0077cc; font-weight:bold; }
+    a:hover { color:#005fa3; }
   </style>
 </head>
 <body>
 
-<header>
-  <nav>
-    <ul>
-      <li><a href="index.html">Accueil</a></li>
-      <li><a href="contact.html">Contact</a></li>
-      <li><a href="visiter.html">Visiter</a></li>
-      <li><a href="acces.html">Accès</a></li>
-      <li><a href="tarifs.html">Tarifs</a></li>
-      <li><a href="activites.html">Activités</a></li>
-      <li><a href="fauves.html">Fauves</a></li>
-      <li><a href="photos.html">Photos</a></li>
-      <li><a href="manger.html">Manger</a></li>
-    </ul>
-  </nav>
-</header>
+<h1>Comment accéder au zoo</h1>
+<p>Le zoo est situé à Villanova en Corse. Vous pouvez venir en voiture, en bus ou à vélo.</p>
 
-<div class="container">
-  <h1>Comment accéder au zoo</h1>
-  <p>Le zoo est situé à Villanova en Corse. Vous pouvez venir en voiture, en bus ou à vélo.</p>
+<h2>Plan Google Maps :</h2>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2659.258382708426!2d8.658677010094992!3d41.974184635159126!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2z41wrNTgnMjcuMSJOIDjCsDM5JzMyLjkiRQ!5e0!3m2!1sfr!2sfr!4v1632749089395!5m2!1sfr!2sfr" height="450"></iframe>
 
-  <h2>Plan Google Maps :</h2>
-  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2659.258382708426!2d8.658677010094992!3d41.974184635159126!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2z41wrNTgnMjcuMSJOIDjCsDM5JzMyLjkiRQ!5e0!3m2!1sfr!2sfr!4v1632749089395!5m2!1sfr!2sfr" allowfullscreen="" loading="lazy"></iframe>
-
-</div>
+<p><a href="index.html">← Retour à l'accueil</a></p>
 
 </body>
 </html>
