--- a/tarifs.html
+++ b/tarifs.html
@@ -1,74 +1,33 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Tarifs du Zoo - Aquazoo des Ciel2</title>
+  <title>Tarifs du Zoo</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f4faff;
-      margin: 0;
-      color: #333;
-    }
-
-    header { position: sticky; top: 0; z-index: 10; }
-    nav ul {
-      list-style: none;
-      display: flex;
-      gap: 20px;
-      justify-content: center;
-      background: #0077cc;
-      padding: 15px;
-      border-radius: 8px;
-      margin: 0;
-      flex-wrap: wrap;
-    }
-    nav ul li a { text-decoration: none; color: white; font-weight: bold; font-size: 18px; padding: 8px 12px; border-radius: 6px; transition: 0.3s; }
-    nav ul li a:hover { background: #005fa3; }
-
-    .container { max-width: 800px; margin: 30px auto; padding: 0 16px; text-align: center; }
-    h1 { color: #0077cc; margin-bottom: 10px; }
-    h4 { margin-bottom: 20px; }
-
-    table { width: 100%; border-collapse: collapse; margin: 0 auto; }
-    th, td { border: 1px solid #0077cc; padding: 10px; text-align: center; }
-    th { background-color: #0077cc; color: white; }
-
-    
+    body { font-family: Arial, sans-serif; background-color:#f4faff; margin:0; color:#333; text-align:center; }
+    h1 { color:#0077cc; margin-top:20px; }
+    h4 { margin-bottom:20px; }
+    table { margin:0 auto 20px auto; border-collapse: collapse; width:80%; max-width:600px; }
+    th, td { border:1px solid #0077cc; padding:10px; text-align:center; }
+    th { background:#0077cc; color:white; }
+    a { text-decoration:none; color:#0077cc; font-weight:bold; }
+    a:hover { color:#005fa3; }
   </style>
 </head>
 <body>
 
-<header>
-  <nav>
-    <ul>
-      <li><a href="index.html">Accueil</a></li>
-      <li><a href="contact.html">Contact</a></li>
-      <li><a href="visiter.html">Visiter</a></li>
-      <li><a href="acces.html">Accès</a></li>
-      <li><a href="tarifs.html">Tarifs</a></li>
-      <li><a href="activites.html">Activités</a></li>
-      <li><a href="fauves.html">Fauves</a></li>
-      <li><a href="photos.html">Photos</a></li>
-      <li><a href="manger.html">Manger</a></li>
-    </ul>
-  </nav>
-</header>
+<h1>Nos tarifs</h1>
+<h4>-50% pour les personnes bénéficiant du tarif résident.</h4>
 
-<div class="container">
-  <h1>Nos tarifs</h1>
-  <h4>-50% pour les personnes bénéficiant du tarif résident.</h4>
+<table>
+  <tr><th>Catégorie</th><th>Tarif</th></tr>
+  <tr><td>Adultes</td><td>15 €</td></tr>
+  <tr><td>Enfants (-12 ans)</td><td>8 €</td></tr>
+  <tr><td>Étudiants</td><td>10 €</td></tr>
+  <tr><td>Groupes (10+ personnes)</td><td>12 €/personne</td></tr>
+</table>
 
-  <table>
-    <tr><th>Catégorie</th><th>Tarif</th></tr>
-    <tr><td>Adultes</td><td>15 €</td></tr>
-    <tr><td>Enfants (-12 ans)</td><td>8 €</td></tr>
-    <tr><td>Étudiants</td><td>10 €</td></tr>
-    <tr><td>Groupes (10+ personnes)</td><td>12 €/personne</td></tr>
-  </table>
-
-
-</div>
+<p><a href="index.html">← Retour à l'accueil</a></p>
 
 </body>
 </html>
