--- a/photos.html
+++ b/photos.html
@@ -1,120 +1,32 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Photos - Aquazoo des Ciel2</title>
+  <title>Photos du Zoo</title>
   <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background-color: #f4faff;
-      color: #333;
-    }
-
-    /* Menu de navigation */
-    header {
-      position: sticky;
-      top: 0;
-      z-index: 10;
-    }
-    nav ul {
-      list-style: none;
-      display: flex;
-      gap: 14px;
-      justify-content: center;
-      background: #0077cc;
-      padding: 12px;
-      margin: 0;
-      flex-wrap: wrap;
-    }
-    nav ul li a {
-      text-decoration: none;
-      color: white;
-      font-weight: bold;
-      font-size: 16px;
-      padding: 8px 12px;
-      border-radius: 6px;
-      transition: 0.3s;
-    }
-    nav ul li a:hover {
-      background: #005fa3;
-    }
-
-    /* Conteneur principal */
-    .container {
-      max-width: 1100px;
-      margin: 30px auto;
-      padding: 0 16px;
-      text-align: center;
-    }
-
-    h1 {
-      color: #0077cc;
-      margin-bottom: 20px;
-    }
-
-    /* Grille photos */
-    .gallery {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
-      gap: 20px;
-    }
-
-    .gallery img {
-      width: 100%;
-      height: auto;
-      border-radius: 10px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-      transition: transform 0.3s, box-shadow 0.3s;
-      cursor: pointer;
-    }
-
-    .gallery img:hover {
-      transform: scale(1.05);
-      box-shadow: 0 8px 20px rgba(0,0,0,0.2);
-    }
-
-   
+    body { font-family: Arial, sans-serif; background-color:#f4faff; margin:0; color:#333; text-align:center; }
+    h1 { color:#0077cc; margin-top:20px; }
+    .gallery { display:flex; flex-wrap:wrap; justify-content:center; gap:10px; margin:20px; }
+    .gallery img { width:30%; max-width:300px; border-radius:8px; }
+    a { text-decoration:none; color:#0077cc; font-weight:bold; }
+    a:hover { color:#005fa3; }
+    @media(max-width:800px){ .gallery img{ width:45%; } }
+    @media(max-width:500px){ .gallery img{ width:90%; } }
   </style>
 </head>
 <body>
 
-<header>
-  <nav>
-    <ul>
-      <li><a href="index.html">Accueil</a></li>
-      <li><a href="contact.html">Contact</a></li>
-      <li><a href="visiter.html">Visiter</a></li>
-      <li><a href="acces.html">Accès</a></li>
-      <li><a href="tarifs.html">Tarifs</a></li>
-      <li><a href="activites.html">Activités</a></li>
-      <li><a href="fauves.html">Fauves</a></li>
-      <li><a href="photos.html">Photos</a></li>
-      <li><a href="manger.html">Manger</a></li>
-    </ul>
-  </nav>
-</header>
-
-<div class="container" >
-  <h1>Album photo</h1>
-
-  <div class="gallery">
-    <img src="photo1.jpg" alt="Photo 1" >
-    <img src="photo2.jpg" alt="Photo 2">
-    <img src="photo3.jpg" alt="Photo 3">
-    <img src="photo4.jpg" alt="Photo 4">
-    <img src="photo5.jpg" alt="Photo 5">
-    <img src="photo6.jpg" alt="Photo 6">
-	<img src="photo7.jpg" alt="Photo 7">
-	<img src="photo8.jpg" alt="Photo 8">
-	<img src="photo9.jpg" alt="Photo 9">
-	<img src="denty.jpg" alt="Photo 10">
-	<img src="poulpe.jpg" alt="Photo 11">
-	<img src="loup.jpg" alt="Photo 12">
-  </div>
-
-
+<h1>Album Photo</h1>
+<div class="gallery">
+  <img src="photo1.jpg" alt="Photo 1">
+  <img src="photo2.jpg" alt="Photo 2">
+  <img src="photo3.jpg" alt="Photo 3">
+  <img src="photo4.jpg" alt="Photo 4">
+  <img src="photo5.jpg" alt="Photo 5">
+  <img src="photo6.jpg" alt="Photo 6">
 </div>
+
+<p><a href="index.html">← Retour à l'accueil</a></p>
 
 </body>
 </html>
