--- a/photos.html
+++ b/photos.html
@@ -24,6 +24,16 @@
   <img src="photo4.jpg" alt="Photo 4">
   <img src="photo5.jpg" alt="Photo 5">
   <img src="photo6.jpg" alt="Photo 6">
+  <img src="photo7.jpg" alt="Photo 7">
+  <img src="photo8.jpg" alt="Photo 8">
+  <img src="photo9.jpg" alt="Photo 9">
+  <img src="denty.jpg" alt="Photo 10">
+  <img src="poulpe.jpg" alt="Photo 11">
+  <img src="loup.jpg" alt="Photo 12">
+
+
+
+  
 </div>
 
 <p><a href="index.html">← Retour à l'accueil</a></p>
