--- a/fauves.html
+++ b/fauves.html
@@ -20,20 +20,21 @@
 
 <table>
 <tr>
-  <td><b>Lions</b> – le roi des animaux</td>
+  <td><b>Lions</b> – le roi des animaux(d'où l'expression "OHHH LIONNNN!)"</td>
   <td><img src="lion.jpg" alt="Lion"></td>
 </tr>
 <tr>
-  <td><b>Tigres</b> – puissants félins d’Asie</td>
   <td><img src="tigre.jpg" alt="Tigre"></td>
+  <td><b>Tigres</b> – puissants félins d’Asie(d'où l'expression "tié un TIHGREE!)</td>
 </tr>
 <tr>
   <td><b>Guépards</b> – Le plus rapide de la savanne</td>
   <td><img src="guepard.jpg" alt="Guépard"></td>
 </tr>
-<tr>
-  <td><b>Lynx</b> – Chasse la nuit, yeux perçants</td>
+<tr> 
   <td><img src="lynx.jpg" alt="Lynx"></td>
+  <td><b>Lynx</b> – Chasse la nuit, yeux perçants(d'où l'expression "T'y a des yeux de lynxxxxxx!)</td>
+ 
 </tr>
 </table>
 
