--- a/fauves.html
+++ b/fauves.html
@@ -20,20 +20,20 @@
 
 <table>
 <tr>
-  <td><b>Lions</b> – le roi des animaux(d'où l'expression "OHHH LIONNNN!)"</td>
+  <td><b>Lions</b><h1> – le roi des animaux (d'où l'expression "OHHH LIONNNN!)"</h1></td>
   <td><img src="lion.jpg" alt="Lion"></td>
 </tr>
 <tr>
   <td><img src="tigre.jpg" alt="Tigre"></td>
-  <td><b>Tigres</b> – puissants félins d’Asie(d'où l'expression "tié un TIHGREE!)</td>
+  <td><b>Tigres</b><h1> – puissants félins d’Asie (d'où l'expression "tié un TIHGREE!)</h1></td>
 </tr>
 <tr>
-  <td><b>Guépards</b> – Le plus rapide de la savanne</td>
+  <td><b>Guépards</b><h1> – Le plus rapide de la savanne</h1></td>
   <td><img src="guepard.jpg" alt="Guépard"></td>
 </tr>
 <tr> 
   <td><img src="lynx.jpg" alt="Lynx"></td>
-  <td><b>Lynx</b> – Chasse la nuit, yeux perçants(d'où l'expression "T'y a des yeux de lynxxxxxx!)</td>
+  <td><b>Lynx</b><H1> – Chasse la nuit, yeux perçants (d'où l'expression "T'y a des yeux de lynxxxxxx!)</H1></td>
  
 </tr>
 </table>
