--- a/manger.html
+++ b/manger.html
@@ -32,13 +32,13 @@
 
 <div class="side">
 <h2>Stand à crêpes</h2>
-<img src="crepes.jpg" alt="Crêpes">
+<img src="stand-crepes.jpg" alt="Crêpes">
 <p>Dégustez crêpes sucrées ou salées à tout moment de la journée.</p>
 </div>
 
 <div class="side">
 <h2>Stand à glaces</h2>
-<img src="glaces.jpg" alt="Glaces">
+<img src="stand-glaces.jpg" alt="Glaces">
 <p>Glaces artisanales pour se rafraîchir en été.</p>
 </div>
 
