--- a/manger.html
+++ b/manger.html
@@ -4,42 +4,77 @@
   <meta charset="UTF-8">
   <title>Restauration au Zoo</title>
   <style>
-    body { font-family: Arial, sans-serif; background-color:#f4faff; margin:0; color:#333; text-align:center; }
-    h1,h2 { color:#0077cc; margin-top:20px; }
-    p { font-size:18px; margin-bottom:20px; }
-    img { max-width:100%; border-radius:8px; margin-bottom:20px; }
-    .side { width:45%; display:inline-block; vertical-align:top; margin:0 2%; }
-    a { text-decoration:none; color:#0077cc; font-weight:bold; }
-    a:hover { color:#005fa3; }
-    @media(max-width:800px){ .side{ width:90%; display:block; margin:10px auto; } }
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f4faff;
+      margin: 0;
+      color: #333;
+      text-align: center;
+    }
+    h1, h2 { color: #0077cc; margin-top: 20px; }
+    p { font-size: 18px; margin-bottom: 20px; }
+    .container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 20px;
+      max-width: 1200px;
+      margin: 30px auto;
+    }
+    .section {
+      flex: 1 1 45%;
+      background: #fff;
+      padding: 15px;
+      border-radius: 10px;
+      box-shadow: 0 3px 8px rgba(0,0,0,0.1);
+      text-align: center;
+    }
+    .section img {
+      width: 100%;
+      max-width: 550px;
+      border-radius: 8px;
+      margin-bottom: 15px;
+    }
+    a {
+      text-decoration: none;
+      color: #0077cc;
+      font-weight: bold;
+    }
+    a:hover { color: #005fa3; }
+
+    @media(max-width: 900px){
+      .section { flex: 1 1 90%; }
+    }
   </style>
 </head>
 <body>
 
 <h1>Options de restauration</h1>
 
-<div class="side">
-<h2>Restaurant simple</h2>
-<img src="restaurant.jpg" alt="Restaurant simple">
-<p>Profitez de repas complets et variés pour toute la famille.</p>
-</div>
+<div class="container">
+  <div class="section">
+    <h2>Restaurant simple</h2>
+    <img src="restaurant.jpg" alt="Restaurant simple">
+    <p>Profitez de repas complets et variés pour toute la famille.</p>
+  </div>
 
-<div class="side">
-<h2>Paillote</h2>
-<img src="paillote.jpg" alt="Paillote">
-<p>Snack et boissons fraîches face au golfe.</p>
-</div>
+  <div class="section">
+    <h2>Paillote</h2>
+    <img src="paillote.jpg" alt="Paillote">
+    <p>Snack et boissons fraîches face au golfe.</p>
+  </div>
 
-<div class="side">
-<h2>Stand à crêpes</h2>
-<img src="stand-crepes.jpg" alt="Crêpes">
-<p>Dégustez crêpes sucrées ou salées à tout moment de la journée.</p>
-</div>
+  <div class="section">
+    <h2>Stand à crêpes</h2>
+    <img src="crepes.jpg" alt="Crêpes">
+    <p>Dégustez crêpes sucrées ou salées à tout moment de la journée.</p>
+  </div>
 
-<div class="side">
-<h2>Stand à glaces</h2>
-<img src="stand-glaces.jpg" alt="Glaces">
-<p>Glaces artisanales pour se rafraîchir en été.</p>
+  <div class="section">
+    <h2>Stand à glaces</h2>
+    <img src="glaces.jpg" alt="Glaces">
+    <p>Glaces artisanales pour se rafraîchir en été.</p>
+  </div>
 </div>
 
 <p><a href="index.html">← Retour à l'accueil</a></p>
