--- a/fauves.html
+++ b/fauves.html
@@ -2,58 +2,40 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Restauration au Zoo</title>
+  <title>Fauves du Zoo</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f4faff;
-      margin: 0;
-      color: #333;
-      text-align: center;
-    }
-    h1, h2 { color: #0077cc; margin-top: 20px; }
-    p { font-size: 18px; margin-bottom: 20px; }
-    .section {
-      margin: 30px auto;
-      max-width: 800px;
-    }
-    .section img {
-      width: 90%;
-      max-width: 600px;
-      border-radius: 8px;
-      margin-bottom: 15px;
-    }
-    a { text-decoration: none; color: #0077cc; font-weight: bold; }
-    a:hover { color: #005fa3; }
+    body { font-family: Arial, sans-serif; background-color:#f4faff; margin:0; color:#333; text-align:center; }
+    h1,h2 { color:#0077cc; margin-top:20px; }
+    table { margin:0 auto 20px auto; border-collapse: collapse; width:80%; max-width:800px; }
+    th, td { border:1px solid #0077cc; padding:10px; text-align:center; vertical-align:top; }
+    img { max-width:250px; border-radius:8px; }
+    a { text-decoration:none; color:#0077cc; font-weight:bold; }
+    a:hover { color:#005fa3; }
   </style>
 </head>
 <body>
 
-<h1>Options de restauration</h1>
+<h1>Voici nos fauves</h1>
+<p>Découvrez les rois de la savane et de la jungle :</p>
 
-<div class="section">
-  <h2>Restaurant simple</h2>
-  <img src="restaurant.jpg" alt="Restaurant simple">
-  <p>Profitez de repas complets et variés pour toute la famille.</p>
-</div>
-
-<div class="section">
-  <h2>Paillote</h2>
-  <img src="paillote.jpg" alt="Paillote">
-  <p>Snack et boissons fraîches face au golfe.</p>
-</div>
-
-<div class="section">
-  <h2>Stand à crêpes</h2>
-  <img src="stand-crepes.jpg" alt="Crêpes">
-  <p>Dégustez crêpes sucrées ou salées à tout moment de la journée.</p>
-</div>
-
-<div class="section">
-  <h2>Stand à glaces</h2>
-  <img src="stand-glaces.jpg" alt="Glaces">
-  <p>Glaces artisanales pour se rafraîchir en été.</p>
-</div>
+<table>
+<tr>
+  <td><H2><b>Lions</b> – le roi des animaux "OHHHH LIONNNN!"</H2></td>
+  <td><img src="lion.jpg" alt="Lion"></td>
+</tr>
+<tr>
+  <td><H2><b>Tigres</b> – puissants félins d’Asie  "T'y es un Tigreeee!"</H2></td>
+  <td><img src="tigre.jpg" alt="Tigre"></td>
+</tr>
+<tr>
+  <td><H2><b>Guépards</b> – Le plus rapide de la savanne</H2></td>
+  <td><img src="guepard.jpg" alt="Guépard"></td>
+</tr>
+<tr>
+  <td><H2><b>Lynx</b> – Chasse la nuit, yeux perçants "T'y a des yeux de LYNX</H2></td>
+  <td><img src="lynx.jpg" alt="Lynx"></td>
+</tr>
+</table>
 
 <p><a href="index.html">← Retour à l'accueil</a></p>
 
