--- a/manger.html
+++ b/manger.html
@@ -55,25 +55,25 @@
   <div class="section">
     <h2>Restaurant simple</h2>
     <img src="restaurant.jpg" alt="Restaurant simple">
-    <p>Profitez de repas complets et variés pour toute la famille.</p>
+    <p>Profitez de repas complets et variés et de sa spécialité;"le giacorussel à la plancha".</p>
   </div>
 
   <div class="section">
     <h2>Paillote</h2>
     <img src="paillote.jpg" alt="Paillote">
-    <p>Snack et boissons fraîches face au golfe.</p>
+    <p>Snack et boissons fraîches face au ugolfe de Lava.</p>
   </div>
 
   <div class="section">
     <h2>Stand à crêpes</h2>
     <img src="stand-crepes.jpg" alt="Crêpes">
-    <p>Dégustez crêpes sucrées ou salées à tout moment de la journée.</p>
+    <p>Dégustez crêpes sucrées ou salées fais maison par Le sheriff.</p>
   </div>
 
   <div class="section">
     <h2>Stand à glaces</h2>
     <img src="stand-glaces.jpg" alt="Glaces">
-    <p>Glaces artisanales pour se rafraîchir en été.</p>
+    <p>Glaces artisanales pour se rafraîchir en été,les doublesrouxel en rafole.</p>
   </div>
 </div>
 
