--- a/activites.html
+++ b/activites.html
@@ -16,12 +16,12 @@
 <body>
 <div class="container">
 <h1>Nos activités</h1>
-<p>Venez découvrir les animations quotidiennes : nourrissage des lions, spectacle des otaries, visites guidées, toboggans, pêche no-kill.</p>
+<p>Venez découvrir les animations quotidiennes : nourrissage des lions, spectacle des otaries, visites guidées, tobogglands, pêche no-kill.</p>
 
-<h2>Vidéo de présentation du toboggans :</h2>
+<h2>Vidéo de présentation du tobogglands avec le giack et deramen :</h2>
 <iframe src="https://www.youtube.com/embed/bvNtuyngL7A" allowfullscreen></iframe>
 
-<h2>Vidéo de présentation de la pêche no-kill :</h2>
+<h2>Vidéo de présentation de la pêche no-kill en compagnie de Hedi:</h2>
 <iframe src="https://www.youtube.com/embed/EcBlpAD2puo" allowfullscreen></iframe>
 
 <p><a href="index.html">← Retour à l'accueil</a></p>
