--- a/acces.html
+++ b/acces.html
@@ -15,7 +15,7 @@
 <body>
 
 <h1>Comment accéder au zoo</h1>
-<p>Le zoo est situé à Villanova en Corse. Vous pouvez venir en voiture, en bus ou à vélo.</p>
+<p>Le zoo est situé à Villanova en Corse. Vous pouvez venir en voiture, en bus ou à vélo,ou en bateau ou avec le bus fortnite aussi.</p>
 
 <h2>Plan Google Maps :</h2>
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2659.258382708426!2d8.658677010094992!3d41.974184635159126!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2z41wrNTgnMjcuMSJOIDjCsDM5JzMyLjkiRQ!5e0!3m2!1sfr!2sfr!4v1632749089395!5m2!1sfr!2sfr" height="450"></iframe>
